force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/leaseworks__Customer_Interaction_Log__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Interaction Log</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>