force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Action_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Action_Recommendation__c</fullName>
    <label>Action/Recommendation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>