force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Asset_Variant_GP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Variant_GP__c</fullName>
    <label>Asset Variant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Asset_Type_GP__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Asset_Variant_Global</valueSetName>
    </valueSet>
</CustomField>