force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Attendee_Text_4__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Attendee_Text_4__c</fullName>
    <label>Z_Unused_2012 Attendee 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>