force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comment__c</fullName>
    <label>Market Intelligence Comments</label>
    <type>TextArea</type>
</CustomField>