force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comments__c</fullName>
    <description>Comments from any interaction with the customer/prospect</description>
    <inlineHelpText>Detail commentary about the meeting.</inlineHelpText>
    <label>Detailed Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>