force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__CompanyNew__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CompanyNew__c</fullName>
    <formula>If(!ISBLANK(leaseworks__Related_To_Counter_Party__c ), leaseworks__Related_To_Counter_Party__r.Name , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>