force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Date_Of_Call__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Of_Call__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Date on which interaction happened</description>
    <inlineHelpText>Date on which interaction happened</inlineHelpText>
    <label>Date Of Interaction</label>
    <type>Date</type>
</CustomField>