force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Engine_Type_List__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Type_List__c</fullName>
    <description>Type of engine that is installed on this aircraft</description>
    <inlineHelpText>Type of engine that is installed on this aircraft</inlineHelpText>
    <label>Z_Unused_2304_Engine Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AE 3007</fullName>
            </value>
            <value>
                <fullName>ALF502</fullName>
            </value>
            <value>
                <fullName>BR700</fullName>
            </value>
            <value>
                <fullName>CF34</fullName>
            </value>
            <value>
                <fullName>CF6</fullName>
            </value>
            <value>
                <fullName>CFM56</fullName>
            </value>
            <value>
                <fullName>GE90</fullName>
            </value>
            <value>
                <fullName>GE9X</fullName>
            </value>
            <value>
                <fullName>GEnx</fullName>
            </value>
            <value>
                <fullName>GP7200</fullName>
            </value>
            <value>
                <fullName>JT3D</fullName>
            </value>
            <value>
                <fullName>JT8D</fullName>
            </value>
            <value>
                <fullName>JT9D</fullName>
            </value>
            <value>
                <fullName>Leap</fullName>
            </value>
            <value>
                <fullName>LF507</fullName>
            </value>
            <value>
                <fullName>PT6A</fullName>
            </value>
            <value>
                <fullName>PW1000G</fullName>
            </value>
            <value>
                <fullName>PW120</fullName>
            </value>
            <value>
                <fullName>PW120A</fullName>
            </value>
            <value>
                <fullName>PW121</fullName>
            </value>
            <value>
                <fullName>PW123</fullName>
            </value>
            <value>
                <fullName>PW124B</fullName>
            </value>
            <value>
                <fullName>PW127E</fullName>
            </value>
            <value>
                <fullName>PW127F</fullName>
            </value>
            <value>
                <fullName>PW127M</fullName>
            </value>
            <value>
                <fullName>PW150A</fullName>
            </value>
            <value>
                <fullName>PW2000</fullName>
            </value>
            <value>
                <fullName>PW2037</fullName>
            </value>
            <value>
                <fullName>PW4000</fullName>
            </value>
            <value>
                <fullName>PW4056</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>