force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Exclude_from_Last_Interactions__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Exclude_from_Last_Interactions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only when this field is false, the system will consider this Interaction Log when writing the Last Interaction related fields on the Operator/CP/Lessor/Account. To exclude certain records from that calculation, the Org must have some logic to set this field to TRUE for the appropriate records.</description>
    <label>Exclude from Last Interactions?</label>
    <type>Checkbox</type>
</CustomField>