force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Fleet_Plans__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fleet_Plans__c</fullName>
    <label>Fleet Plans</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>