force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Intel_Quality__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Intel_Quality__c</fullName>
    <label>Intel Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>