force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__IsMainIL__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IsMainIL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>_IsMainIL?</label>
    <type>Checkbox</type>
</CustomField>