force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Meeting_Attendee_2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Meeting_Attendee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee 2</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Contact doesn&#39;t belong to selected company.</errorMessage>
        <filterItems>
            <field>$Source.leaseworks__Y_Hidden_Disable_Filter_On_Attendee__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interaction Logs (Meeting Attendee 2)</relationshipLabel>
    <relationshipName>Interaction_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>