force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Meeting_Attendee_6__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Meeting_Attendee_6__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee 6</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.leaseworks__Counter_Party__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.leaseworks__Y_Hidden_Disable_Filter_On_Attendee__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interaction Logs (Meeting Attendee 6)</relationshipLabel>
    <relationshipName>Interaction_Logs5</relationshipName>
    <type>Lookup</type>
</CustomField>