force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Price__c</fullName>
    <label>Price ($M)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>