force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Reason__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reason__c</fullName>
    <label>Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>