force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Related_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_Email_Date__c</fullName>
    <inlineHelpText>Message Date of the related email.</inlineHelpText>
    <label>_Related Email Date</label>
    <type>DateTime</type>
</CustomField>