force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Related_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2106 Related To Contact</label>
    <referenceTo>leaseworks__Address__c</referenceTo>
    <relationshipLabel>Z_Unused Interaction Logs</relationshipLabel>
    <relationshipName>Interaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>