force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Related_To_Counter_Party__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_To_Counter_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attaches the interaction log to this Operator, Counterparty or Lessor Account. If the log is created from the corresponding Operator, Counterparty or Lessor Account, this field will be auto populated</description>
    <inlineHelpText>Attaches the interaction log to this Operator, Counterparty or Lessor Account. If the log is created from the corresponding Operator, Counterparty or Lessor Account, this field will be auto populated.</inlineHelpText>
    <label>Related To Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interaction Logs</relationshipLabel>
    <relationshipName>Interaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>