force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Related_To_Counterparty_3__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_To_Counterparty_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2206 Related To Counterparty 3</label>
    <referenceTo>leaseworks__Bank__c</referenceTo>
    <relationshipLabel>Interaction Logs 3</relationshipLabel>
    <relationshipName>Interaction_Logs_CP_3</relationshipName>
    <type>Lookup</type>
</CustomField>