force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Related_To_Deal_Group__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_To_Deal_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Deal Group</label>
    <referenceTo>leaseworks__Deal_Group__c</referenceTo>
    <relationshipLabel>Interaction Logs</relationshipLabel>
    <relationshipName>Interaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>