force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Related_To_Operator_4__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_To_Operator_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attaches the interaction log to this Operator. If the log is created from the corresponding Operator page, this field will be auto popualted</description>
    <inlineHelpText>Attaches the interaction log to this Operator. If the log is created from the corresponding Operator page, this field will be auto popualted</inlineHelpText>
    <label>Z_Unused_OP Related To Operator 4</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Interaction Logs 4</relationshipLabel>
    <relationshipName>Customer_Interaction_Logs_4</relationshipName>
    <type>Lookup</type>
</CustomField>