force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Related_To_Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_To_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attaches the interaction log to this Operator. If the log is created from the corresponding Operator page, this field will be auto popualted</description>
    <inlineHelpText>Attaches the interaction log to this Operator. If the log is created from the corresponding Operator page, this field will be auto populated</inlineHelpText>
    <label>Z_Unused_OP Related To Operator</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Interaction Logs</relationshipLabel>
    <relationshipName>Customer_Interaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>