force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Rent_000__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_000__c</fullName>
    <label>Average Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>