force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Search_Transactions__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Search_Transactions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Z_Unused_2203 Search Transactions</label>
    <type>Checkbox</type>
</CustomField>