force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Summary__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Summary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>