force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Term_Mos__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Term_Mos__c</fullName>
    <label>Term (Mos)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>