force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Transition_and_Modifications_Cost_K__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transition_and_Modifications_Cost_K__c</fullName>
    <label>Transition and Modifications Cost ($M)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>