force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Type_Of_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type_Of_Event__c</fullName>
    <label>Type Of Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Finance and Lease Russia</fullName>
            </value>
            <value>
                <fullName>ISTAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>