force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Type_Of_Interaction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type_Of_Interaction__c</fullName>
    <description>Type interaction - email, call or meeting</description>
    <label>Type Of Interaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
                <default>true</default>
                <label>Call</label>
            </value>
            <value>
                <fullName>Meeting</fullName>
                <label>In-person</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Video Conference</fullName>
            </value>
            <value>
                <fullName>Commercial Weekly Summary Note</fullName>
            </value>
            <value>
                <fullName>Technical Weekly Summary Note</fullName>
            </value>
            <value>
                <fullName>Contracts/Legal Weekly Summary Note</fullName>
            </value>
            <value>
                <fullName>Earnings Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>