force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Variant__c</fullName>
    <label>Z_Unused_2304_Variant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>100B</fullName>
            </value>
            <value>
                <fullName>100F</fullName>
            </value>
            <value>
                <fullName>100SF</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>112</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>200B</fullName>
            </value>
            <value>
                <fullName>200ER</fullName>
            </value>
            <value>
                <fullName>200F</fullName>
            </value>
            <value>
                <fullName>200LR</fullName>
            </value>
            <value>
                <fullName>200PCF</fullName>
            </value>
            <value>
                <fullName>200SF</fullName>
            </value>
            <value>
                <fullName>211</fullName>
            </value>
            <value>
                <fullName>212</fullName>
            </value>
            <value>
                <fullName>231</fullName>
            </value>
            <value>
                <fullName>232</fullName>
            </value>
            <value>
                <fullName>233</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>300ER</fullName>
            </value>
            <value>
                <fullName>300LR</fullName>
            </value>
            <value>
                <fullName>300SF</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>400F</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>600F</fullName>
            </value>
            <value>
                <fullName>600R</fullName>
            </value>
            <value>
                <fullName>700</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>