force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Vintage_Range__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Vintage_Range__c</fullName>
    <description>Vintage Range based on the Vintage year. e.g If Vintage=2010 &amp; Range = 5, find vintage range 2005-2015.</description>
    <inlineHelpText>Vintage Range based on the Vintage year. e.g If Vintage=2010 &amp; Range = 5, find vintage range 2005-2015.</inlineHelpText>
    <label>Vintage Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>