force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Y_Hidden_Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Aircraft_Type__c</fullName>
    <description>Used in the email template</description>
    <formula>TEXT( leaseworks__Asset_Type_GP__c )</formula>
    <label>_Aircraft Type</label>
    <type>Text</type>
</CustomField>