force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Y_Hidden_Discussion_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Discussion_Type__c</fullName>
    <formula>TEXT(leaseworks__Discussion_Type__c)</formula>
    <label>_Discussion Type</label>
    <type>Text</type>
</CustomField>