force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Y_Hidden_IsAutoCreated__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_IsAutoCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>_IsAutoCreated</label>
    <type>Checkbox</type>
</CustomField>